@@ -1,5 +1,7 @@
 === ongoing ===
 
+- Fixed new migrations
+
 === 1.3.2 ===
 
 - Prepared app for Django 1.8
